--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-    <div style="display: flex; justify-content: center; margin: 10px auto; flex-direction: column; align-items: center;"> 
+    <div style="display: flex; justify-content: center; margin: 10px auto; flex-direction: column; align-items: center;flex-wrap: wrap;"> 
         <h2>Joystick Controller</h2>
-        <div style="display: flex; gap: 50px;">
+        <div style="display: flex; gap: 50px; flex-wrap: wrap;">
             <p>X: <span id="x"></span></p>
             <p>Y: <span id="y"></span></p>
+            <p>X Leveled: <span id="xLeveled"></span></p>
+            <p>Y Leveled: <span id="yLeveled"></span></p>
             <p>Distance: <span id="distance"></span></p>
             <p>Angle: <span id="angle"></span></p>
         </div>
