--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <div style="display: flex; justify-content: center; margin: 10px auto; flex-direction: column; align-items: center;flex-wrap: wrap;"> 
-        <h2>Joystick Controller</h2>
-        <div style="display: flex; gap: 50px; flex-wrap: wrap;">
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
             <p>X: <span id="x"></span></p>
             <p>Y: <span id="y"></span></p>
             <p>X Leveled: <span id="xLeveled"></span></p>
@@ -19,6 +18,16 @@
             <p>Distance: <span id="distance"></span></p>
             <p>Angle: <span id="angle"></span></p>
         </div>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap;">
+            <p>X: <span id="x2"></span></p>
+            <p>Y: <span id="y2"></span></p>
+            <p>X Leveled: <span id="xLeveled2"></span></p>
+            <p>Y Leveled: <span id="yLeveled2"></span></p>
+            <p>Distance: <span id="distance2"></span></p>
+            <p>Angle: <span id="angle2"></span></p>
+        </div>
     </div>
+    <script>
+    </script>
 </body>
 </html>
