Fixed typo in html url

--- a/example/index.html
+++ b/example/index.html
@@ -28,7 +28,7 @@
             <p>Angle: <span id="angle2"></span></p>
         </div>
     </div>
-    <script src="https://cdn.statically.io/gh/cyrus2281/joystick-controller/main/dist/umd/joystick-controller.js"></script>
+    <script src="https://cdn.statically.io/gh/cyrus2281/joystick-controller/main/dist/umd/joystick-controller.min.js"></script>
     <!-- <script src="../dist/umd/joystick-controller.js"></script> -->
     <script>
         const x = document.querySelector("#x");
