Updated the gif path and html comment

--- a/example/index.html
+++ b/example/index.html
@@ -28,10 +28,10 @@
             <p>Angle: <span id="angle2"></span></p>
         </div>
     </div>
-    <!-- <script src="https://cdn.statically.io/gh/cyrus2281/joystick-controller/main/dist/umd/joystick-controller.min.js"></script> -->
+    <script src="https://cdn.statically.io/gh/cyrus2281/joystick-controller/main/dist/umd/joystick-controller.min.js"></script>
     <script type="module">
         // uncomment for dev. (the CDN uses the global import, no need for module import)
-        import JoystickController from '../src/joystick-controller.js';
+        // import JoystickController from '../src/joystick-controller.js';
 
         const x = document.querySelector("#x");
         const y = document.querySelector("#y");
