Added Dynamic positioning for Joystick

--- a/example/index.html
+++ b/example/index.html
@@ -130,6 +130,7 @@
                 maxRange: 100,
                 joystickClass: "joystick",
                 distortion: true,
+                dynamicPosition: true,
             },
             (data) => {
                 x2.innerHTML = data.x;
