--- a/example/dynamic.html
+++ b/example/dynamic.html
@@ -63,7 +63,7 @@
 
 <body>
     <canvas class="world"></canvas>
-    <a href="dynamic.html" class="link">Click for Dynamic Position Example</a>
+    <a href="index.html" class="link">Click for Dual JoyStick Example</a>
     <div class="info left">
         <p>X: <span id="x"></span></p>
         <p>Y: <span id="y"></span></p>
@@ -71,14 +71,6 @@
         <p>Y Leveled: <span id="yLeveled"></span></p>
         <p>Distance: <span id="distance"></span></p>
         <p>Angle: <span id="angle"></span></p>
-    </div>
-    <div class="info right">
-        <p>X: <span id="x2"></span></p>
-        <p>Y: <span id="y2"></span></p>
-        <p>X Leveled: <span id="xLeveled2"></span></p>
-        <p>Y Leveled: <span id="yLeveled2"></span></p>
-        <p>Distance: <span id="distance2"></span></p>
-        <p>Angle: <span id="angle2"></span></p>
     </div>
     <script src="https://cdn.statically.io/gh/cyrus2281/joystick-controller/main/dist/umd/joystick-controller.min.js">
     </script>
@@ -96,19 +88,8 @@
         const distance = document.querySelector("#distance");
         const angle = document.querySelector("#angle");
 
-        const x2 = document.querySelector("#x2");
-        const y2 = document.querySelector("#y2");
-        const xLeveled2 = document.querySelector("#xLeveled2");
-        const yLeveled2 = document.querySelector("#yLeveled2");
-        const distance2 = document.querySelector("#distance2");
-        const angle2 = document.querySelector("#angle2");
-
         window.joystickHandlers = {
             leftJoystickHandler: {
-                x: 0,
-                y: 0
-            },
-            rightJoystickHandler: {
                 x: 0,
                 y: 0
             },
@@ -123,6 +104,7 @@
                 joystickRadius: 40,
                 joystickClass: "joystick",
                 distortion: false,
+                dynamicPosition: true,
             },
             (data) => {
                 x.innerHTML = data.x;
@@ -133,26 +115,6 @@
                 angle.innerHTML = data.angle;
                 window.joystickHandlers.leftJoystickHandler.x = data.leveledX
                 window.joystickHandlers.leftJoystickHandler.y = data.leveledY
-            }
-        );
-        const rightJoystick = new JoystickController({
-                x: "20%",
-                y: "20%",
-                leftToRight: false,
-                opacity: 0.5,
-                maxRange: 100,
-                joystickClass: "joystick",
-                distortion: true,
-            },
-            (data) => {
-                x2.innerHTML = data.x;
-                y2.innerHTML = data.y;
-                xLeveled2.innerHTML = data.leveledX;
-                yLeveled2.innerHTML = data.leveledY;
-                distance2.innerHTML = data.distance;
-                angle2.innerHTML = data.angle;
-                window.joystickHandlers.rightJoystickHandler.x = data.leveledX
-                window.joystickHandlers.rightJoystickHandler.y = data.leveledY
             }
         );
     </script>
@@ -194,12 +156,7 @@
         sphere.position.y = 0.5;
         sphere.position.x = 3.5;
         sphere.position.z = 1.5;
-        const sphere2 = new THREE.Mesh(sphereGeometry, material)
-        sphere2.position.y = 1;
-        sphere2.position.x = -3.5;
-        sphere2.position.z = -4.5;
-        sphere2.scale.set(1.5, 1.5, 1.5)
-        scene.add(sphere, sphere2)
+        scene.add(sphere)
 
         const sizes = {
             width: window.innerWidth,
@@ -245,32 +202,20 @@
          * Animate
          */
         const sphereLimit = 6.5
-        const sphere2Limit = 6
         const clock = new THREE.Clock();
         const tick = () => {
             const elapsedTime = clock.getElapsedTime();
             // Update Spheres base on Joystick
-            const sphereX = sphere.position.x - joystickHandlers.rightJoystickHandler.y / 100
-            const sphereY = sphere.position.z - joystickHandlers.rightJoystickHandler.x / 100
-            const sphere2X = sphere2.position.x - joystickHandlers.leftJoystickHandler.y / 100;
-            const sphere2Y = sphere2.position.z - joystickHandlers.leftJoystickHandler.x / 100;
-            const distanceX = (new THREE.Vector2(sphereX, sphere.position.z))
-                .distanceTo(new THREE.Vector2(sphere2X,sphere2.position.z))
-            const distanceY = (new THREE.Vector2(sphere.position.x, sphereY))
-                .distanceTo(new THREE.Vector2(sphere2.position.x,sphere2Y))
-            if (-sphereLimit < sphereX && sphereX < sphereLimit && distanceX > 2.3) {
+            const sphereX = sphere.position.x - joystickHandlers.leftJoystickHandler.y / 100
+            const sphereY = sphere.position.z - joystickHandlers.leftJoystickHandler.x / 100
+
+            if (-sphereLimit < sphereX && sphereX < sphereLimit) {
                 sphere.position.x = sphereX
             }
-            if (-sphereLimit < sphereY && sphereY < sphereLimit && distanceY > 2.3) {
+            if (-sphereLimit < sphereY && sphereY < sphereLimit ) {
                 sphere.position.z = sphereY
             }
-            // Sphere 2
-            if (-sphere2Limit < sphere2X && sphere2X < sphere2Limit && distanceX > 2.3) {
-                sphere2.position.x = sphere2X
-            }
-            if (-sphere2Limit < sphere2Y && sphere2Y < sphere2Limit && distanceY > 2.3) {
-                sphere2.position.z = sphere2Y
-            }
+
             // Render
             renderer.render(scene, camera);
             // Call tick again on the next frame
