--- a/example/dynamic.html
+++ b/example/dynamic.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JoyStick</title>
+    <title>Dynamic Positioning JoyStick Example</title>
     <style>
         * {
             margin: 0;
@@ -26,6 +26,7 @@
 
         .info {
             position: absolute;
+            z-index: 9999;
             background-color: #e3e3e3;
             padding: 10px;
             border-radius: 5px;
@@ -58,6 +59,25 @@
             text-align: center;
             z-index: 9999;
         }
+
+        .panel {
+            position: absolute;
+            opacity: 0.2;
+            width: 100%;
+            height: 100%;
+            z-index: 100;
+            display: flex;
+        }
+        #panel-left {
+            width: 50%;
+            height: 100%;
+            background-color: #ff8d8d;
+        }
+        #panel-right {
+            width: 50%;
+            height: 100%;
+            background-color: #8181ff;
+        }
     </style>
 </head>
 
@@ -71,6 +91,18 @@
         <p>Y Leveled: <span id="yLeveled"></span></p>
         <p>Distance: <span id="distance"></span></p>
         <p>Angle: <span id="angle"></span></p>
+    </div>
+    <div class="info right">
+        <p>X: <span id="x2"></span></p>
+        <p>Y: <span id="y2"></span></p>
+        <p>X Leveled: <span id="xLeveled2"></span></p>
+        <p>Y Leveled: <span id="yLeveled2"></span></p>
+        <p>Distance: <span id="distance2"></span></p>
+        <p>Angle: <span id="angle2"></span></p>
+    </div>
+    <div class="panel">
+        <div id="panel-left"></div>
+        <div id="panel-right"></div>
     </div>
     <script src="https://cdn.statically.io/gh/cyrus2281/joystick-controller/main/dist/umd/joystick-controller.min.js">
     </script>
@@ -88,16 +120,25 @@
         const distance = document.querySelector("#distance");
         const angle = document.querySelector("#angle");
 
+        const x2 = document.querySelector("#x2");
+        const y2 = document.querySelector("#y2");
+        const xLeveled2 = document.querySelector("#xLeveled2");
+        const yLeveled2 = document.querySelector("#yLeveled2");
+        const distance2 = document.querySelector("#distance2");
+        const angle2 = document.querySelector("#angle2");
+
         window.joystickHandlers = {
             leftJoystickHandler: {
+                x: 0,
+                y: 0
+            },
+            rightJoystickHandler: {
                 x: 0,
                 y: 0
             },
         }
 
         const leftJoystick = new JoystickController({
-                x: "30%",
-                y: "30%",
                 opacity: 0.5,
                 maxRange: 80,
                 radius: 70,
@@ -105,6 +146,7 @@
                 joystickClass: "joystick",
                 distortion: false,
                 dynamicPosition: true,
+                dynamicPositionTarget: document.querySelector("#panel-left"),
             },
             (data) => {
                 x.innerHTML = data.x;
@@ -115,6 +157,25 @@
                 angle.innerHTML = data.angle;
                 window.joystickHandlers.leftJoystickHandler.x = data.leveledX
                 window.joystickHandlers.leftJoystickHandler.y = data.leveledY
+            }
+        );
+        const rightJoystick = new JoystickController({
+                opacity: 0.5,
+                maxRange: 100,
+                joystickClass: "joystick",
+                distortion: true,
+                dynamicPosition: true,
+                dynamicPositionTarget: document.querySelector("#panel-right"),
+            },
+            (data) => {
+                x2.innerHTML = data.x;
+                y2.innerHTML = data.y;
+                xLeveled2.innerHTML = data.leveledX;
+                yLeveled2.innerHTML = data.leveledY;
+                distance2.innerHTML = data.distance;
+                angle2.innerHTML = data.angle;
+                window.joystickHandlers.rightJoystickHandler.x = data.leveledX
+                window.joystickHandlers.rightJoystickHandler.y = data.leveledY
             }
         );
     </script>
@@ -156,7 +217,12 @@
         sphere.position.y = 0.5;
         sphere.position.x = 3.5;
         sphere.position.z = 1.5;
-        scene.add(sphere)
+        const sphere2 = new THREE.Mesh(sphereGeometry, material)
+        sphere2.position.y = 1;
+        sphere2.position.x = -3.5;
+        sphere2.position.z = -4.5;
+        sphere2.scale.set(1.5, 1.5, 1.5)
+        scene.add(sphere, sphere2)
 
         const sizes = {
             width: window.innerWidth,
@@ -202,20 +268,32 @@
          * Animate
          */
         const sphereLimit = 6.5
+        const sphere2Limit = 6
         const clock = new THREE.Clock();
         const tick = () => {
             const elapsedTime = clock.getElapsedTime();
             // Update Spheres base on Joystick
-            const sphereX = sphere.position.x - joystickHandlers.leftJoystickHandler.y / 100
-            const sphereY = sphere.position.z - joystickHandlers.leftJoystickHandler.x / 100
-
-            if (-sphereLimit < sphereX && sphereX < sphereLimit) {
+            const sphereX = sphere.position.x - joystickHandlers.rightJoystickHandler.y / 100
+            const sphereY = sphere.position.z - joystickHandlers.rightJoystickHandler.x / 100
+            const sphere2X = sphere2.position.x - joystickHandlers.leftJoystickHandler.y / 100;
+            const sphere2Y = sphere2.position.z - joystickHandlers.leftJoystickHandler.x / 100;
+            const distanceX = (new THREE.Vector2(sphereX, sphere.position.z))
+                .distanceTo(new THREE.Vector2(sphere2X,sphere2.position.z))
+            const distanceY = (new THREE.Vector2(sphere.position.x, sphereY))
+                .distanceTo(new THREE.Vector2(sphere2.position.x,sphere2Y))
+            if (-sphereLimit < sphereX && sphereX < sphereLimit && distanceX > 2.3) {
                 sphere.position.x = sphereX
             }
-            if (-sphereLimit < sphereY && sphereY < sphereLimit ) {
+            if (-sphereLimit < sphereY && sphereY < sphereLimit && distanceY > 2.3) {
                 sphere.position.z = sphereY
             }
-
+            // Sphere 2
+            if (-sphere2Limit < sphere2X && sphere2X < sphere2Limit && distanceX > 2.3) {
+                sphere2.position.x = sphere2X
+            }
+            if (-sphere2Limit < sphere2Y && sphere2Y < sphere2Limit && distanceY > 2.3) {
+                sphere2.position.z = sphere2Y
+            }
             // Render
             renderer.render(scene, camera);
             // Call tick again on the next frame
